kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artificial-or-natural-intelligence
