kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: artificial-or-natural-intelligence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/kwurzinger/artificialornaturalintelligence-backend:ff751a421a37899c87f1b03eab641cae3cd6f61e
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: artificial-or-natural-intelligence
  annotations:
    cloud.google.com/load-balancer-type: "External"
    networking.gke.io/load-balancer-ip-addresses: projects/project-630566f1-fd55-4ba6-b5e/regions/us-central1/addresses/artificial-or-natural-intelligence-backend-ip
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
